--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "ejercicio5_20220270_ivansalguero",
-    "slug": "ejercicio5_20220270_ivansalguero",
+    "name": "practica-login",
+    "slug": "practica-login",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
